src/components/main_content/MainContent.css
main {
    overflow: auto;
    padding-bottom: var(--footer-height);
}

.fWohKN {
    z-index: 1;
}

#back-to-top-button {
    background-color: rgb(250, 250, 250);
    font-size: 0.75em;
    color: var(--primary-color);
    width: 2.5rem;
    height: 2.5rem;
    border: 3px solid var(--primary-color);
    border-radius: 50%;
    padding: 0.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 100ms ease;
}

#back-to-top-button:hover {
    padding: 0.55rem;
    box-shadow: 5px 5px 5px rgb(105, 105, 105);
}

@media screen and (max-width: 479px) {
    main {
        padding-left: 0.5em;
        padding-right: 0.5em;
    }
}

